objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <fields>
        <fullName>Co_Sell_Partner_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co Sell Partner Modified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTSCU_Accept__c</fullName>
        <formula>IF (
	ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;), 
	/*IF(
		Block_Old_DAS__c || ((Needs_Repricing__c || CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) ||  Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)),
	*/
		HYPERLINK(&quot;/apex/Confirm_Reprice?confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=/apex/APTSCU_AcceptProposal?id=&apos;+Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;),
	/*	
		HYPERLINK(&quot;/apex/APTSCU_AcceptProposal?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;)
	), */ NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTSCU_Make_Primary__c</fullName>
        <formula>IF (
	AND(
		LEN(Apttus_Proposal__Opportunity__c ) &gt; 0, NOT (Apttus_Proposal__Primary__c)
	), 
	/*IF(
		Block_Old_DAS__c || ((Needs_Repricing__c || CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) || Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)), 
	*/	
		HYPERLINK(&quot;/apex/Confirm_Reprice?backtoVF=true&amp;confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=/apex/APTSCU_MakeProposalPrimary?id=&apos;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_MakePrimary&quot;, &quot;Make Primary&quot;),&quot;_self&quot;),
	/*	
		HYPERLINK(&quot;/apex/APTSCU_MakeProposalPrimary?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_MakePrimary&quot;, &quot;Make Primary&quot;),&quot;_self&quot;)
	), */ 
	NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Configure_Products__c</fullName>
        <formula>IF(
/*IF CONDITION 1*/   
   AND(
       LEN(Apttus_QPConfig__PriceListId__c) &gt; 0,
       NOT(ISBLANK( Apttus_QPConfig__BillToAccountId__r.Name)),
       NOT(
           OR(IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;In Review&apos;),      
              IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval In Progress&apos;),    
              IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Accepted&apos;) 
             )
          )
      ),
/*TRUE
 IF(Block_Old_DAS__c || 
 ((Needs_Repricing__c || 
 CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) || 
 Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) 
 &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)),
*/  
 HYPERLINK(&quot;/apex/Confirm_Reprice?backtoVF=true&amp;confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=/apex/Apttus_QPAsset__ProposalConfiguration?flow=&apos;+SelectedFlow__c+&apos;&amp;mode=addon&amp;id=&apos;+Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;),
 /*
 HYPERLINK(&quot;/apex/Apttus_QPAsset__ProposalConfiguration?flow=&quot;+SelectedFlow__c+&quot;&amp;id=&quot; &amp;Id+&apos;&amp;mode=addon&apos;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;)) ,
FALSE*/
NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Generate__c</fullName>
        <formula>IF( 
	AND( 
		NOT( 
			OR(
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Draft&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval Required&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;In Review&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval In Progress&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Denied&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Rejected&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Cancelled&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Accepted&apos;)
			)
		),
		NOT(Preview_Generate_Skip_Check__c)
	), 
	/*IF(
		Block_Old_DAS__c || ((Needs_Repricing__c || CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) || Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)), 
	*/	
		HYPERLINK(&quot;/apex/Confirm_Reprice?confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=/apex/Apttus_Proposal__ProposalGenerate?id=&apos;&amp;Id , IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),
	/*	
		HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id , IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)
		), */ 
	NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Present__c</fullName>
        <formula>IF( 
	AND( 
		NOT( 
			OR(
				IsPickVal(Apttus_Proposal__Approval_Stage__c,&apos;Draft&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval Required&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;In Review&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval In Progress&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approved&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Accepted&apos;)
			) 
		)
	), 
	/* IF(
		Block_Old_DAS__c || ((Needs_Repricing__c || CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) || Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)), 
	*/	
		HYPERLINK(&quot;/apex/Confirm_Reprice?confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=/apex/Apttus_Proposal__ProposalPresent?id=&apos;+Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;),&quot;_self&quot;),
	/*	
		HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalPresent?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;),&quot;_self&quot;)
	), */ 
	NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Preview__c</fullName>
        <formula>IF(
	AND( 
		NOT(
			OR(
				IsPickVal(Apttus_Proposal__Approval_Stage__c,&apos;Approved&apos;),
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Generated&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Presented&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Accepted&apos;)
			)
		),
		NOT(Preview_Generate_Skip_Check__c)
	), 
	/*IF(
		Block_Old_DAS__c || ((Needs_Repricing__c || CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) || Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)), 
	*/	
		HYPERLINK(&quot;/apex/Confirm_Reprice?backtoVF=true&amp;confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=/apex/Apttus_Proposal__ProposalGenerate?action=Preview&amp;id=&apos;+Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),
	/*	
		HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Preview&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;)
	),*/ 
	NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW__c</fullName>
        <formula>Apttus_QPConfig__BillToAccountId__c  =  Apttus_Proposal__Opportunity__r.Architectural_Workshop_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Architectural Workshop Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Reg_Margin__c</fullName>
        <formula>Apttus_QPConfig__BillToAccountId__c  = Apttus_Proposal__Opportunity__r.Deal_Reg_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deal Reg Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generate_Excel__c</fullName>
        <formula>IF(
	AND( 
		NOT(
			OR(
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Draft&apos;),  
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval Required&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Approval In Progress&apos;),
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;In Review&apos;),  
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Denied&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Rejected&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Cancelled&apos;), 
				IsPickVal(Apttus_Proposal__Approval_Stage__c, &apos;Accepted&apos;)
			)
		)
	),
	/*IF(
		Block_Old_DAS__c || ((Needs_Repricing__c || CONTAINS( Line_Item_SKU__c , &apos;ZSUITE&apos;) || Price_List_Name__c == &apos;ZScaler FY2017 Price List&apos;) &amp;&amp; NOT(Ignore_Quote_Reprice_Pricelist_Switch__c)), 
	*/	
		HYPERLINK(&quot;/apex/Confirm_Reprice?confirmrepricequoteid=&quot; +Id+&apos;&amp;retURL=https://apttus-xapps.na5.visual.force.com/apex/EditInExcelLaunch?appName=App&amp;parentRecordId=&apos;+Id,IMAGE(&quot;/resource/GenerateExcel&quot;,&quot;Generate Excel&quot;),&quot;_self&quot;),
	/*	
		HYPERLINK(&quot;https://apttus-xapps.na5.visual.force.com/apex/EditInExcelLaunch?parentRecordId=&quot;&amp;Id+&apos;&amp;appName=App&apos;,IMAGE(&quot;/resource/GenerateExcel&quot;,&quot;Generate Excel&quot;),&quot;_self&quot;)
	), */ 
	NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generate Excel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model_Type_Partner__c</fullName>
        <label>Partner Program</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Model_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Net_Price_Label_Template__c</fullName>
        <formula>IF( ISPICKVAL(Model_Type_Partner__c , &apos;Partner Summit&apos;), &apos;MSRP&apos;, &apos;$ Net&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Price Label - Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POV_Margin__c</fullName>
        <formula>Apttus_QPConfig__BillToAccountId__c  =  Apttus_Proposal__Opportunity__r.POV_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>POV Margin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SelectedFlow__c</fullName>
        <formula>IF(ISPICKVAL(Model_Type_Partner__c, &apos;Partner Summit&apos;) ,
IF(RecordType.Name = &apos;Renewal&apos;,
IF( Apttus_Proposal__Opportunity__r.Partner_Margin_Adjustment__c = TRUE,&apos;PartnerSummitWith_Adj_Renewal&apos;,&apos;PartnerSummitWithout_Adj_Renewal&apos;),
IF( Apttus_Proposal__Opportunity__r.Partner_Margin_Adjustment__c = TRUE,&apos;PartnerSummitWithAdjustment_NewUpsell&apos;,&apos;PartnerSummit_Without_Adjustment&apos;)),
IF(RecordType.Name = &apos;Renewal&apos;,&apos;Renewals&apos;, &apos;NewUpsell&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SelectedFlow</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Deal_Discount__c</fullName>
        <formula>((Total_List_Price_Without_Credit__c- Total_Net_to_Zscaler__c)/Total_List_Price_Without_Credit__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Deal Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Stackable_Margin__c</fullName>
        <formula>((APTS_Proposal_Net_Price__c- Total_Net_to_Zscaler__c)/APTS_Proposal_Net_Price__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stackable Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>